argocd/manifests/postiz/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postiz
  namespace: apps
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - postiz.gbsoft.net
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: postiz-postiz-app
          port: http
